# home-automation

./: .env.example  .gitignore  README.md  api-server.conf  api-server.py  aranet4.py  ikea-pm.py  lights.py  mi-temps.py  octopus-fetch.py  pyproject.toml
zigbee/: docker-compose.yaml
