[tool.poetry]
name = "home-automation"
version = "0.1.0"
description = ""
authors = ["Matthew Gilpin <matt@matthewgilpin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
